# db-galera-cluster

./: .gitignore  README.md  STEP.md  prepare-cluster.sh
.github/workflows/: build-dist.yml
backup-galera-proyek/mariadb-galera-cluster-copy-fix/: ARSITEKTUR.md  deploy-mariadb-cluster.yml  prepare-cluster.sh
backup-galera-proyek/mariadb-galera-cluster-fix-backup/: .gitignore  ARSITEKTUR.md  CHANGELOG.md  OPERASI.md  README.md  ansible.cfg  apply-config.sh  haproxy-config.j2  inventory.yml  mariadb-cluster-config.j2  setup-ssh.sh
galera-cluster-dist/: .gitignore  README.md  VERSION  apply-config.yml  check-cluster-network.sh  deploy-mariadb-cluster.yml  group_vars_haproxy.yml.example  inventory.yml  requirements.yml  reset-galera-cluster.sh  run-deploy.sh  start.bat  start.sh
galera-cluster-dist/docs/: ARSITEKTUR.md  OPERASI.md
mariadb-galera-cluster/: README.md  deploy-mariadb-cluster.yml  haproxy-config.j2  inventory.yml  mariadb-cluster-config.j2
mariadb-galera-cluster-fix/: .gitignore  README.md  STEP.md  configure-inventory.sh  fix-sudo-on-server.sh  inventory.yml  mariadb-cluster-config.j2  run-full-deploy.sh  setup-ssh.sh
mariadb-galera-cluster-fix/docs/: MULAI-DISINI.md  README.md
mariadb-galera-cluster-fix/tools/: assemble-dist.sh  pack-dist.sh  release.sh
mariadb-galera-cluster-fix/trash/: README.md
mariadb-galera-cluster-fix/tui/: Cargo.toml  README.md
mariadb-galera-cluster-fix/tui/src/: ansible.rs  app.rs  docs.rs  inventory.rs  main.rs  paths.rs  ui.rs
mariadb-galera-cluster-fix/tui/src/ui/: draw.rs
(+4 files in other folders)
