[package]
name = "galera-tui"
version = "0.1.0"
edition = "2021"
description = "TUI controller for MariaDB Galera Cluster + HAProxy (Ansible)"
license = "MIT"
readme = "README.md"

[[bin]]
name = "galera-tui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
crossterm = "0.28"
ratatui = "0.28"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tui-textarea = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
